Refactor .gitignore for improved clarity and add GitHub repository cloning endpoint. Updated .gitignore to simplify patterns and added a new POST endpoint in main.py for cloning public GitHub repositories, including error handling. Introduced repo_clone service for URL parsing and repository management.

--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,23 @@
 # Dependencies
-./backend/.venv
-./frontend/node_modules
+.venv/
+node_modules/
 
 # Python
-./backend/__pycache__
-./backend/*.pyc
-./backend/*.pyo
-./backend/*.pyd
-./backend/*.pyw
-./backend/*.pyz
-./backend/*.pywz
+__pycache__
+*.pyc
+*.pyo
+*.pyd
+*.pyw
+*.pyz
+*.pywz
 
 # Next.js
-./frontend/.next/
-./frontend/out/
+.next/
+out/
 
 # Production builds
-./frontend/dist/
-./backend/dist/
+dist/
+dist/
 
 # Environment variables
 .env
