--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,4 +12,6 @@ dependencies = [
     "tiktoken",
     "pymongo[srv]>=4.15.3",
     "boto3>=1.40.62",
+    "httpx>=0.27.0",
+    "langfuse>=3.7.0",
 ]
