--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,8 +20,10 @@
     "@tiptap/starter-kit": "^3.8.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "jsdom": "^24.1.3",
     "lucide-react": "^0.548.0",
     "mermaid": "^11.12.1",
+    "dompurify": "^3.1.7",
     "next": "16.0.0",
     "playwright": "^1.56.1",
     "react": "19.2.0",
@@ -33,10 +35,12 @@
     "remark-parse": "^11.0.0",
     "remark-stringify": "^11.0.0",
     "tailwind-merge": "^3.3.1",
-    "unified": "^11.0.5"
+    "unified": "^11.0.5",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/jsdom": "^21.1.7",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
