feat: integrate Clerk authentication and improve configuration
- Add Clerk authentication middleware to protect API routes
- Initialize Clerk SDK client with public path definitions
- Update CORS configuration to use environment-based frontend URL
- Fix .gitignore to allow .env.example while excluding other env files
- Remove duplicate MongoClient import in clients.py
- Reduce verbose logging in git repo routes

This change establishes authentication infrastructure using Clerk SDK,
enabling user authentication for the backend API while maintaining
public access to specified endpoints (health, metrics, docs).

Created mcp server to connect pages tools to AI agent client

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
+!.env.example
 
 # IDE
 .vscode/
@@ -75,8 +76,6 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
 
 # vercel
 .vercel
