--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -16,4 +16,6 @@ dependencies = [
     "langfuse>=3.7.0",
     "clerk-backend-api>=2.1.0",
     "ordered-set>=4.1.0",
+    "tree-sitter>=0.23.2",
+    "tree-sitter-python>=0.23.6",
 ]
