--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -17,3 +17,8 @@ dependencies = [
     "clerk-backend-api>=2.1.0",
     "ordered-set>=4.1.0",
 ]
+
+[dependency-groups]
+dev = [
+    "tinydb>=4.8.2",
+]
