--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -18,6 +18,8 @@ dependencies = [
     "ordered-set>=4.1.0",
     "tree-sitter>=0.23.2",
     "tree-sitter-python>=0.23.6",
+    "pydantic>=2.12.3",
+    "pydantic-settings>=2.11.0",
 ]
 
 [dependency-groups]
