--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -20,6 +20,8 @@ dependencies = [
     "tree-sitter-python>=0.23.6",
     "pydantic>=2.12.3",
     "pydantic-settings>=2.11.0",
+    "sqlalchemy[asyncio]>=2.0.44",
+    "asyncpg>=0.30.0",
 ]
 
 [dependency-groups]
