feat(auth): add API key auth for MCP via Redis
Introduce Redis (Upstash) to store and validate API key contexts and
enforce API key auth for /api/mcp endpoints via X-Api-Key headers.
Add API keys module and utilities for hashing (argon2) and Redis
lookups, and initialize Redis during app startup with health checks
and graceful shutdown.

Also:
- add MCP_BASE_URL and Upstash env vars; update .env.example
- add redis and argon2-cffi deps; update lockfile
- wire API keys router; minor MCP controller import fix
- refactor Postgres config to DATABASE_URL and init tables on startup
- rename DB session helper to get_session
- remove unused MCP models and placeholder api_manage

BREAKING CHANGE: environment variable POSTGRES_CONNECTION is renamed to
DATABASE_URL; update your configuration. The DB session factory
get_async_session is renamed to get_session.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -13,3 +13,6 @@ LANGFUSE_BASE_URL = ""
 CLERK_SECRET_KEY=""
 IS_PRO_USER=""
 LOG_LEVEL="INFO"
+UPSTASH_REDIS_REST_URL=""
+UPSTASH_REDIS_REST_TOKEN=""
+MCP_BASE_URL=""
