--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -22,6 +22,8 @@ dependencies = [
     "pydantic-settings>=2.11.0",
     "sqlalchemy[asyncio]>=2.0.44",
     "asyncpg>=0.30.0",
+    "argon2-cffi>=25.1.0",
+    "redis>=7.0.1",
 ]
 
 [dependency-groups]
