feat(dependencies): add mermaid-py for diagram generation and update related configurations
- Added `mermaid-py` dependency to `pyproject.toml` and `uv.lock` for enhanced diagram capabilities.
- Introduced new Mermaid diagram examples in `prompts.py` to assist with error handling and validation.
- Updated `MermaidDiagram` component with improved styling and configuration options for better rendering.
- Added multiple background images for the login page to enhance visual appeal.
- Refactored `service.py` to include repository name in tree hierarchy creation, improving clarity in output.

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "asyncpg>=0.30.0",
     "argon2-cffi>=25.1.0",
     "redis>=7.0.1",
+    "mermaid-py>=0.8.0",
 ]
 
 [dependency-groups]
