--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-markdown": "^10.1.0",
+    "react-pageflip": "^2.0.3",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
     "remark-mermaidjs": "^7.0.0",
